--- a/css/adapt.css
+++ b/css/adapt.css
@@ -2,22 +2,189 @@
 
 @media only screen and (max-width: 480px)
 {
-/*	.container2 .content img
-	{
-		width: 0;
-	}*/
-	header
-	{
-		width: 400px;
-	}
-	.container .text
-	{
-		width: 350px;
-	}
-	.container1
-	{
-		width: 100%;
 
-		
+	header{
+		width: 90%;
+	}
+	.container1{
+			height: 800px;
+	}
+	.text{
+	/*position: absolute;*/
+	width: 100%;
+	height: 116px;
+	/*background: red;*/
+	margin: 40% auto;
+	
+}
+	.text h1
+{
+	font-size: 22px;
+}
+
+.text p
+{
+	font-size: 14px;
+}
+hr
+{
+	width: 96%;
+	margin-left: 2%;
+}
+
+	/*cont22222========================================*/
+	.container2 {height: 970px;}
+	.content{width: 100%; height: 100%;}
+.text2{
+	width: 90%;
+	/*background: green;*/
+	margin-right: 4%;
+	top:70%;}
+
+	.text2 h2{font-size: 16px; margin-bottom: 10px;}
+	.text2 p{font-size: 12px; line-height:14px;}
+	.content img{width: 95%; margin-top: 50px; margin-left: 3%;}
+	button{top: 90%; left: 5%;}
+	
+	/*cont3======================*/
+
+	.container3{height: 1400px;}
+.images
+{
+	width: 100%;
+	height: 85%;
+	/*background: green;*/
+	top: 55px;
+	margin-bottom: 30px;
+	flex-direction: column;
+	align-items: center;
+}
+	.container3 h2 {font-size: 30px;line-height: 30px;padding-top: 70px;}
+	.container3 p {font-size: 14px;padding-top: 15px;}
+/*cont4=================*/
+.container4
+{
+	width: 100%;
+	height: 950px;
+
+	/*display: flex;*/
+	padding-top: 20%;
+	/*justify-content: center;*/
+}
+.container4 .content
+{
+	width: 90%;
+	height: 90%;
+	/*background: red;*/
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	
+}
+.content .tx
+{
+	height: 49%;
+	width: 100%;
+	/*background: green*/
+}
+.tx h1
+{
+	font-size: 18px;
+	margin-bottom: 20px;
+}
+.tx h2
+{
+	font-size: 14px;
+	margin-left: 40px;
+	margin-top: 0px;
+}
+.tx p
+{
+	font-size: 12px;
+	line-height: 16px;
+	margin-top: 0px;
+}
+/*cont5=======================*/
+.container5
+{
+	width: 100%;
+	height: 1900px;
+	/*background: green;*/	
+}
+.container5 .content .box1 {display: none;}
+.container5 .content
+{
+	width: 95%;
+	height: 90%;
+	/*background: red;*/
+	margin-top: 50px;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+.container5 h1 {font-size: 25px; padding-top: 45px;}
+.container5 p  {font-size: 12px; padding-top: 0px;}
+/*cont6====================*/
+.container6
+{
+	width: 100%;
+	height: 850px;
+	/*background: #DDDFEB;	*/
+
+}
+.container6 .content
+{
+	width: 100%;
+	height: 100%;
+	/*background: red;*/
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+.container6 .content .text {width: 90%;height: 230px;margin: 0;}
+.container6 .content .text img {width: 50px;margin-top: 40px;}
+#pod{margin-top: 35px; width: 40%; margin-bottom: 20px;}
+.container6 .content img{width: 90%;margin-top: 0;margin-left: 0;}
+.container6 .content .text p
+{
+	height: 70px;
+	font-size: 12px;
+	/*background: red;*/
+	line-height: 14px;
+	margin-top: 30px;
+}
+.container6 .content .text h2 {font-size: 18px;line-height: 50px;}
+.container6 .content .text h3 {font-size: 13px;}
+/*cont7===========================*/
+.container7
+{
+	width: 100%;
+	height: 1650px;
+	/*padding-top: 130px;*/
+}
+.container7 .content
+{
+	/*width: 580px;*/
+	width: 96%;
+	height: 100%;
+	position: relative;
+	/*background: red;*/
+}
+.container7 .content .box,
+.container7 .content .box1
+{
+	position: relative;
+	width: 90%;
+	height: 730px;
+	left: 2%;
+	margin-left: 20px;
+
+}
+	.container7 .content .box1 {margin-top: 20px;justify-content: space-between;}
+	.container7 .content .box1 .block {width: 100%;height: 230px;}
+	input{width: 80%;}
+	textarea {width: 80%;}
+	.container7 .content .box button {
+		left: 35px;
 	}
 }
