--- a/css/adapt.css
+++ b/css/adapt.css
@@ -37,14 +37,15 @@ hr
 	.content{width: 100%; height: 100%;}
 .text2{
 	width: 90%;
+	height: 270px;
 	/*background: green;*/
 	margin-right: 4%;
-	top:70%;}
+	top:670px;}
 
 	.text2 h2{font-size: 16px; margin-bottom: 10px;}
 	.text2 p{font-size: 12px; line-height:14px;}
 	.content img{width: 95%; margin-top: 50px; margin-left: 3%;}
-	button{top: 90%; left: 5%;}
+	/*button{top: 80%; left: 0%;}*/
 	
 	/*cont3======================*/
 
@@ -176,7 +177,8 @@ hr
 	position: relative;
 	width: 90%;
 	height: 730px;
-	left: 2%;
+	/*left: 2%;*/
+	/*right: 2%;*/
 	margin-left: 20px;
 
 }
@@ -186,5 +188,8 @@ hr
 	textarea {width: 80%;}
 	.container7 .content .box button {
 		left: 35px;
+		top: none;
+		margin: 0;
+
 	}
 }
