--- a/css/adapt.css
+++ b/css/adapt.css
@@ -37,15 +37,15 @@ hr
 	.content{width: 100%; height: 100%;}
 .text2{
 	width: 90%;
-	height: 270px;
+	height: 26%;
 	/*background: green;*/
 	margin-right: 4%;
-	top:670px;}
+	top:70%;}
 
 	.text2 h2{font-size: 16px; margin-bottom: 10px;}
 	.text2 p{font-size: 12px; line-height:14px;}
 	.content img{width: 95%; margin-top: 50px; margin-left: 3%;}
-	/*button{top: 80%; left: 0%;}*/
+	button{margin-top: 3%;}
 	
 	/*cont3======================*/
 
