--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ hr
 {
 	width: 610px;
 	height: 420px;
-	background: green;
+	/*background: green;*/
 	position: absolute;
 	top: 170px;
 	right: 0px;
