--- a/css/adapt.css
+++ b/css/adapt.css
@@ -33,21 +33,19 @@ hr
 }
 
 	/*cont22222========================================*/
-	.container2 {height: 130vh;}
+	.container2 {height: 970px;}
 	.content{width: 100%; height: 100%;}
 .text2{
 	width: 90%;
 	height: 26%;
 	/*background: green;*/
 	margin-right: 4%;
-	margin-top: 700px;
-	top:0%;
-}
+	top:70%;}
 
 	.text2 h2{font-size: 16px; margin-bottom: 10px;}
 	.text2 p{font-size: 12px; line-height:14px;}
 	.content img{width: 95%; margin-top: 50px; margin-left: 3%;}
-	button{margin-top: 5%;}
+	button{margin-top: 3%;}
 	
 	/*cont3======================*/
 
