--- a/css/adapt1080.css
+++ b/css/adapt1080.css
@@ -129,7 +129,7 @@ hr
 .container6
 {
 	width: 100%;
-	height: 850px;
+	height: 750px;
 	/*background: #DDDFEB;	*/
 
 }
@@ -188,7 +188,7 @@ hr
 	textarea {width: 80%;}
 	.container7 .content .box button {
 		left: 35px;
-		top: none;
+		top: 640px;
 		margin: 0;
 
 	}
