--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,40 @@
 		font-family: 'Raleway', sans-serif;
 		font-family: 'Roboto', sans-serif;
 */
+#go-top {
+  position: fixed; 
+  bottom: 25px; 
+  right: 10px; 
+  cursor:pointer; 
+  display:none;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: rgba(0,0,0,0.5);
+  text-align: center;
+  transition: 0.2s
+}
+ 
+#go-top:hover {
+  background: #FF284A;
+}
+#go-top i
+{
+	color: #fff;
+	margin-top: 30%;
+	animation: up 1s infinite ease-in-out alternate;
+	transition: 0.2s
+}
+@keyframes up
+{
+ 0%{
+ 	transform: translateY(-5px);
+ }
+ 100%{
+ 	transform: translateY(5px);
+ }
+}
+
 .container1
 {
 	display: block;
@@ -568,7 +602,7 @@ textarea::placeholder
 	height: 50px;
 	background: #FF284A;
 	position: absolute;
-	top: 640px;
+	top: 610px;
 	left: 342px;
 	outline: none;
 	color: white;
