--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ button:hover
 	height: 665px;
     background:#DDDFEB;
     text-align: center;
+    /*overflow: hidden;*/
 }
 .images
 {
@@ -664,3 +665,26 @@ footer .icon i:hover
 	color: #FF2B4A;
 }
 /*=========================================*/
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+.animated {
+/*CSS transitions*/
+-o-transition-property: none !important;
+-moz-transition-property: none !important;
+-ms-transition-property: none !important;
+-webkit-transition-property: none !important;
+transition-property: none !important;
+/*CSS transforms*/
+-o-transform: none !important;
+-moz-transform: none !important;
+-ms-transform: none !important;
+-webkit-transform: none !important;
+transform: none !important;
+/*CSS animations*/
+-webkit-animation: none !important;
+-moz-animation: none !important;
+-o-animation: none !important;
+-ms-animation: none !important;
+animation: none !important;
+}
+}
